@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

!define unique(x) <color:green>x</color>

entity "users" as users {
  * id : int <<generated>>
  --
  * username : varchar(15)
  * password : varchar(255)
  * city : varchar(255)
  * uf : varchar(2)
  * unique(cpf) : varchar(11)
  * unique(email) : varchar(80)
  * unique(phone) : varchar(11)
  adopter_score : double(2, 1) unsigned
  donor_score : double(2, 1) unsigned
  profile_pic_path : varchar(255)
  * admin : enum('S', 'N') default 'N'
  * active : enum('S', 'N', 'B') default 'S'
}

entity "adoptions" as adoptions {
  * id : number <<generated>>
  --
  * created_at : timestamp default current_timestamp
  closed_at : timestamp
  * status : enum('A', 'F') default 'A'
  * old_owner_id : int <<FK>>
  new_owner_id : int <<FK>>
  * desc : text
  * pet_size : enum('S','M','L')
  pet_name : varchar(20)
  pet_age : int(4) unsigned
  pet_species : enum('cachorro', 'gato')
  pet_breed : varchar(40)
  pet_color : varchar(20)
  thumbnail_path : varchar(255)
  adopter_score : double(2, 1) unsigned
  donor_score : double(2, 1) unsigned
}

entity "adoption_pics" as adp_pics {
  * id : int <<generated>>
  --
  * path : varchar(255)
  * adoption_id : int <<FK>>
}

entity "favorites" as favs {
  * id : int <<generated>>
  --
  * adoption_id : int <<FK>>
  * user_id : int <<FK>>
  * created_at : timestamp default current_timestamp
}

entity "reports" as reports {
  * id int <<generated>>
  --
  * type : enum('U', 'A')
  * reporter_id : int <<FK>>
  * status : enum('A', 'F', 'D') default 'A'
  desc : text
  reported_user_id : int <<FK>>
  reported_adoption_id : int <<FK>>
}

entity "chats" as chats {
  * id int <<generated>>
  --
  * adoption_id : int <<FK>>
  * adopter_id : int <<FK>>
}

entity "messages" as msgs {
  * id int <<generated>>
  --
  * chat_id : int <<FK>>
  * sender_id : int <<FK>>
  * created_at : timestamp default current_timestamp
  * content : text
  desc : text
}

' e01 ||..o{ e02
' e01 |o..o{ e03

users ||..o{ favs
users ||..o{ adoptions
users ||..o{ reports
users ||..o{ chats
users ||..o{ msgs

adoptions ||..o{ favs
adoptions ||..o{ chats
adoptions ||..o{ adp_pics
adoptions |o..o{ reports

chats ||..o{ msgs

@enduml